# Soroban-ZK-Std

./: BENCHMARK.md  BENCHMARKS.md  Cargo.toml  GAS.md  README.md  VERIFICATION.md  WASM_SIZES.md
.github/workflows/: ci.yml
contracts/shielded-asset-template/: Cargo.toml
contracts/shielded-asset-template/src/: lib.rs
contracts/verifier-sample/: Cargo.toml
contracts/verifier-sample/src/: lib.rs
crates/soroban-zk-core/: Cargo.toml
crates/soroban-zk-core/benches/: g1_ops.rs
crates/soroban-zk-core/tests/: eip196_vectors.rs  kat_fr.rs  proptest_fr.rs
crates/soroban-zk-std/: Cargo.toml
crates/soroban-zk-std/benches/: instruction_cost.rs
crates/soroban-zk-std/src/: groth16.rs  lib.rs  pairing.rs  poseidon2.rs
crates/zk-core/: Cargo.toml
crates/zk-core/src/: lib.rs
crates/zk-soroban/: Cargo.toml
crates/zk-soroban/benches/: instruction_cost.rs
crates/zk-soroban/src/: lib.rs  pairing.rs
docs/math/: bulletproofs.md  fq12_sparse.mdx  ntt.mdx
frontend/: CONTRIBUTING-DOCS.md  fix-fri.mjs  fix-fri2.mjs  fix-math.mjs  mdx-components.tsx  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/__tests__/: mdx-components.test.tsx
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: CodeBlock.tsx  LazyDocsRegion.tsx  Navbar.tsx  SearchModal.tsx  Sidebar.tsx  TocSidebar.tsx  theme-toggle.tsx
frontend/data/: versions.json
frontend/hooks/: useDocVersion.ts
frontend/lib/: api-data.json  mdx.ts  navigation.ts
frontend/scripts/: fetch-github-versions.mjs
(+34 files in other folders)
