
[package]
name = "zk-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ethnum = {workspace = true}
itertools = { version = "0.14.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "g1_ops"
harness = false
